# CMake_Project_Template

./: CMakeLists.txt  Makefile  README.md
src/app/: CMakeLists.txt
src/include/: CMakeList
src/lib/: CMakeList
